# test_task

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  error.h  interface.cpp  interface.h  logger.cpp  logger.h  main  main.cpp  saveload.cpp  saveload.h  shortener.cpp  shortener.h  url_shortener  urls.txt
